# my-test-app

./: .env  .gitignore  Procfile  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/my_test_app/: main.py
