[project]
name = "my-test-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.116.1)",
    "uvicorn (==0.32.0)",
    "psycopg2-binary (==2.9.10)",
    "python-dotenv (==1.0.1)"
]

[tool.poetry]
packages = [{include = "my_test_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
